# PersonMask_TFLite

./: CMakeLists.txt  README.md
data/models/: mobilenet_v3_segm_256.tflite
include/: buffer.h  camera.h  cxxopts.h  predictor.h  video_writer.h
src/: camera.cpp  main.cpp  predictor.cpp  video_writer.cpp
